<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.main.FinderFragment">

    <TextView
        android:id="@+id/finder_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finder_slogan"
        android:textAlignment="center"
        android:textSize="34sp"
        app:autoSizeMaxTextSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/tags_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tags_title"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTags"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_find_existing" />

    <TextView
        android:id="@+id/chat_name_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chat_name_field_title"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editChatName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_create_new" />

    <EditText
        android:id="@+id/editTags"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/tags_hint"
        android:inputType="textPersonName"
        android:maxLength="64"
        app:layout_constraintBottom_toTopOf="@+id/find_chat_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tags_title" />

    <TextView
        android:id="@+id/title_find_existing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_find_existing"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/tags_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finder_title" />

    <TextView
        android:id="@+id/title_create_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_create_new"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/chat_name_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/find_chat_button" />

    <Button
        android:id="@+id/find_chat_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/find_chat_button"
        app:layout_constraintBottom_toTopOf="@+id/title_create_new"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTags" />

    <Button
        android:id="@+id/create_chat_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="56dp"
        android:text="@string/button_create_chat_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editChatName"
        app:layout_constraintVertical_bias="0.071" />

    <EditText
        android:id="@+id/editChatName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="23dp"
        android:ems="10"
        android:hint="@string/chat_name_field"
        android:inputType="textPersonName"
        android:maxLength="20"
        app:layout_constraintBottom_toTopOf="@+id/create_chat_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chat_name_field" />

</androidx.constraintlayout.widget.ConstraintLayout>